--- a/1zad.html
+++ b/1zad.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header>Ime Prezime</header>
+    <header>
+        <h1> Ime Prezime</h1>
+        <h2> Front end developer iz Novog Sada</h2>
+    </header>
 </body>
 </html>
