--- a/1zad.html
+++ b/1zad.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="stil.css" rel="stylesheet"
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -11,5 +12,12 @@
         <h1> Ime Prezime</h1>
         <h2> Front end developer iz Novog Sada</h2>
     </header>
+
+    <nav>
+        <p>pocetna</p>
+        <p>O meni</p>
+        <p>Porstofolio</p>
+        <p>kontakt</p>
+    </main>
 </body>
 </html>
